--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,10 @@
   to {
     transform: rotate(360deg);
   }
+} */
+.header-bg {
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+  background: #0a1930;
 }
