--- a/src/pages/Register.css
+++ b/src/pages/Register.css
@@ -1,4 +1,4 @@
-.container{
+.main_container{
     margin: 0;
     padding: 0;
     background-repeat: no-repeat;
@@ -8,31 +8,32 @@
     overflow: hidden;
   }
   
-  .center{
+  .center_filed{
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 29rem;
+    width: 49rem;
     background: white;
     border-radius: 10px;
   }
   
-  .center h1{
+  .center_filed h1{
     color: red;
+    font-size:3rem;
     font-family:Arial, Helvetica, sans-serif ;
     text-align: center;
-    padding: 0 0 20px 0;
+    padding: 18px 0 20px 0;
     border-bottom: 1px solid silver;
   }
   
-  .center form{
+  .center_filed form{
     padding: 0 40px;
     box-sizing: border-box;    
     }
     @media screen and (max-width: 500px){
-      .center{
-        width: 70%;
+      .center_filed{
+        width: 85%;
         padding: 0;
       }
     }
