--- a/src/pages/Register.css
+++ b/src/pages/Register.css
@@ -3,7 +3,7 @@
     padding: 0;
     background-repeat: no-repeat;
     background-size: cover;
-    background: linear-gradient(120deg, #007bff, #d0314c);
+    background: linear-gradient(120deg, #4727DB, #8432e5);
     height: 100vh;
     overflow: hidden;
   }
@@ -13,13 +13,13 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 49rem;
+    width: 41rem;
     background: white;
     border-radius: 10px;
   }
   
   .center_filed h1{
-    color: red;
+    color: rgb(7, 7, 7);
     font-size:3rem;
     font-family:Arial, Helvetica, sans-serif ;
     text-align: center;
@@ -33,7 +33,7 @@
     }
     @media screen and (max-width: 500px){
       .center_filed{
-        width: 85%;
+        width: 80%;
         padding: 0;
       }
     }
@@ -110,7 +110,7 @@
   }
   
   input[type="Submit"]:hover{
-    background: #2691d9;
+    background: #8432e5;
     color: #e9f4fb;
     transition: .5s;
   }
