--- a/src/components/store/Store.css
+++ b/src/components/store/Store.css
@@ -79,17 +79,8 @@
   resize: none;
   outline: none;
   border-radius: 6px;
+  text-align: center;
 }
-.input-sub label{
-    position: absolute;
-    top: 515rem;
-    left:68rem;
-    color: #adadad;
-    transform: translateY(-50%);
-    font-size: 16px;
-    pointer-events: none;
-    font-family: Arial, Helvetica, sans-serif;
-  }
 .second-pard button {
   position: absolute;
   appearance: button;
