--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -44,10 +44,17 @@
     position: relative;
     right: 70%;
     margin-top: 21%;
+    z-index: 1;
   }
   
 
-  
+  .rot{
+    position: absolute;
+    width: 60%;
+    left:51rem;
+    top:-16rem;
+    z-index: -1;
+  }
 
   
   @keyframes bounce {
