--- a/src/components/stay/Stay.css
+++ b/src/components/stay/Stay.css
@@ -60,8 +60,7 @@
     width: 30%;
     margin-right: 10%;
 }
-.down-left p:nth-child(3){
-}
+
 .down-left p:nth-child(4){
     width: 30%;
     margin-right: 10%;
@@ -168,3 +167,16 @@
   input{
     padding: 1%;
   }
+  .arrow{
+    margin-top: 20%;
+    margin-bottom: 10%;
+    margin-left: 93%;
+    width:2.3%;
+   max-height: 45px;
+    background-color: #a4a3a3;
+    border-radius: 8%;
+  }
+ .arrow a{
+    transition: all 0.3s;
+
+ }
