--- a/src/components/shares/Shares.css
+++ b/src/components/shares/Shares.css
@@ -1,68 +1,117 @@
 .container-shares {
+  margin: 0 auto;
+  margin-bottom: 5%;
+  display: flex;
+  flex-direction: row;
+  z-index: 1;
+}
+.title2 {
+  text-align: center;
+  margin-bottom: 4rem;
+}
 
-     margin: 0 auto;
-     margin-bottom: 5%;
-     display: flex;
-     flex-direction: row;
-     
-   }
-   .title2 {
-     text-align: center;
-     margin-bottom: 4rem;
-   }
-   
-   .title2 h1 {
-     position:absolute;
-     left: 175px;
-     bottom: 120px;
-     font-size: 1rem;
-     font-weight: 300;
-     line-height: 1.4;
-     margin: 1.2rem 0;
-     width: 110%;
-     
-   }
-   .title2 h1 span:nth-child(1){
-     margin-left: -18%;
-   }
-   
-   
-   .shares-content {
-     margin-top: 7%;
-     display: flex;
-     flex-direction: column;
-     justify-content: center;
-     min-width: 40%;
-     /* padding: 3rem 0; */
-   }
-   
-   .shares-left {
-     flex: 1;
-     text-align: center;
-   }
-   .shares-left img {
-     width: 65%;
-   }
-   .shares-right {
-     flex: 1;
-     position: absolute;
-     left: 270px;
-   }
-   
-   .share-right {
-     margin-left: 27%;
-     margin-top: 5%;
-   }
+.title2 h1 {
+  position: absolute;
+  left: 175px;
+  bottom: 120px;
+  font-size: 1rem;
+  font-weight: 300;
+  line-height: 1.4;
+  margin: 1.2rem 0;
+  width: 110%;
+}
+.title2 h1 span:nth-child(1) {
+  margin-left: -18%;
+}
 
-   .learn-cta{
-    position: absolute;
-margin-top: 36%;
-    left: 14%;
-   }
-  
-   @media screen and (max-width: 600px) {
-     .shares-content {
-       flex-direction: column;
-     }
-   }
-   
+.shares-content {
+  margin-top: 7%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-width: 40%;
+  /* padding: 3rem 0; */
+}
+
+.shares-left {
+  flex: 1;
+  text-align: center;
+}
+.shares-left img {
+  width: 65%;
+}
+.shares-right {
+  flex: 1;
+  position: absolute;
+  left: 270px;
+  z-index: 2;
+}
+
+.share-right {
+  margin-left: 27%;
+  margin-top: 5%;
+  z-index: 2;
+}
+.share-right img {
+  z-index: 2;
+}
+.learn-cta {
+  position: absolute;
+  margin-top: 36%;
+  left: 14%;
+}
+
+.small-card2 span:nth-child(1) {
+  z-index: 1;
+  position: absolute;
+  left: 20rem;
+  top: 258rem;
+  min-width: 4rem;
+  min-height: 4rem;
+  background-color: #fafafa;
+  border-radius: 8%;
+  box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.2);
+  border: 0.9px solid rgb(206, 206, 206);
+}
+.small-card2 span:nth-child(2) {
+  z-index: 1;
+  position: absolute;
+  left: 20rem;
+  top: 264.7rem;
+  min-width: 4rem;
+  min-height: 4rem;
+  background-color: #fafafa;
+  border-radius: 8%;
+  box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.2);
+  border: 0.9px solid rgb(206, 206, 206);
+}
+.small-card2 span:nth-child(3) {
+  z-index: 1;
+  position: absolute;
+  left: 20rem;
+  top: 271.2rem;
+  min-width: 4rem;
+  min-height: 4rem;
+  background-color: #fafafa;
+  border-radius: 8%;
+  box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.2);
+  border: 0.9px solid rgb(206, 206, 206);
+}
+.small-card2 span:nth-child(4) {
+  z-index: 1;
+  position: absolute;
+  left: 20rem;
+  top: 277.7rem;
+  min-width: 4rem;
+  min-height: 4rem;
+  background-color: #fafafa;
+  border-radius: 8%;
+  box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.2);
+  border: 0.9px solid rgb(206, 206, 206);
+}
+
+@media screen and (max-width: 600px) {
+  .shares-content {
+    flex-direction: column;
+  }
+}
