--- a/src/components/work/Works.css
+++ b/src/components/work/Works.css
@@ -66,17 +66,31 @@
   left: 51.5%;
   top:206rem;  
 }
-.small-card image:nth-child(1){ 
+.small-card img:nth-child(1){ 
 
   position: absolute;
-  left: 100rem;
+  left: 0.8rem;
+  top: 1.2rem;
   z-index: 2;
   
 }
-.small-card image{
+.small-card img:nth-child(2){ 
+
   position: absolute;
-  padding: 1%;
+  left: 5.8rem;
+  top: 1.1rem;
+
   z-index: 2;
+  
+}
+.small-card img:nth-child(3){ 
+
+  position: absolute;
+  left:10.8rem;
+  top: 1.1rem;
+
+  z-index: 2;
+  
 }
 
 .image{
