--- a/src/components/features/Features.css
+++ b/src/components/features/Features.css
@@ -1,61 +1,83 @@
-#features{
-    position: relative;
+#features {
+  position: relative;
 }
 .title {
-    text-align: center;
-    margin-bottom: 4rem;
-    position: relative;
-  }
-  
-  .title h2 {
-    position: relative;
-    font-size: 4rem;
-    font-weight: 280px;
-    line-height: 1.4;
-    color: var(--dark-text);
-    margin: 1.5rem 0;
-  }
-  
-  .title p {
-    position: relative;
-    font-size: 1.3rem;
-    width: 50%;
-    min-width: 40rem;
-    margin: 0 auto;
-    color: var(--dark-text);
-  }
-  
+  text-align: center;
+  margin-bottom: 4rem;
+  position: relative;
+}
+
+.title h2 {
+  position: relative;
+  font-size: 4rem;
+  font-weight: 280px;
+  line-height: 1.4;
+  color: var(--dark-text);
+  margin: 1.5rem 0;
+}
+
+.title p {
+  position: relative;
+  font-size: 1.3rem;
+  width: 50%;
+  min-width: 40rem;
+  margin: 0 auto;
+  color: var(--dark-text);
+}
+
+.features-content {
+  display: flex;
+  width: 107%;
+  /* justify-content: center; */
+  /* padding: 3rem 0; */
+}
+.features h2::after {
+  content: "";
+  position: absolute;
+  left: 450px;
+  bottom: -10px;
+  width: 6%;
+  height: 2px;
+  background: #4727db;
+}
+.features-left {
+  flex: 1;
+  text-align: center;
+}
+.features-left img {
+  width: 65%;
+}
+.features-right {
+  /* flex: 1; */
+  display: flex;
+  flex-wrap: wrap;
+}
+
+@media screen and (max-width: 860px) {
   .features-content {
-    display: flex;
-    width: 107%;
-    /* justify-content: center; */
-    /* padding: 3rem 0; */
+    flex-direction: column;
+    margin-left: 15%;
   }
   .features h2::after {
-    content: "";
-    position: absolute;
-    left:450px;
-    bottom: -10px;
-    width: 6%;
-    height: 2px;
-    background: #4727DB;
+    left: 380px;
   }
-  .features-left {
-    flex: 1;
-    text-align: center;
+}
+
+@media screen and (max-width: 600px) {
+  .features-content {
+    flex-direction: column;
   }
-  .features-left img {
-    width: 65%;
-  }
-  .features-right {
-    /* flex: 1; */
-    display: flex;
-    flex-wrap: wrap;
+  .features h2::after {
+    display: none;
   }
   
-  @media screen and (max-width: 600px) {
-    .features-content {
-      flex-direction: column;
-    }
+}
+@media screen and (max-width: 400px) {
+  .title p {
+    width: 5%;
+    min-width: 20rem;
   }
-  
+  .u-text-small{
+    width: 5%;
+  }
+}
