--- a/src/components/work/Works.css
+++ b/src/components/work/Works.css
@@ -1,6 +1,6 @@
 .container-works {
   width: 95vw;
-  height: 100vh;
+  height: 90vh;
   margin: 0 auto;
   margin-bottom: 5%;
   display: flex;
@@ -56,11 +56,14 @@
   margin-left: 20%;
   margin-top: 7%;
 }
+.work-right img{
+  width: 90%;
+}
 .small-card {
   position: absolute;
   display: flex;
   left: 51.5%;
-  top: 206rem;
+  top: 202rem;
 }
 .small-card img:nth-child(1) {
   position: absolute;
@@ -92,7 +95,7 @@
   z-index: 1;
   position: absolute;
   left: 74rem;
-  top: 210rem;
+  top: 206rem;
   min-width: 4rem;
   min-height: 4rem;
   background-color: #fafafa;
@@ -104,7 +107,7 @@
   z-index: 1;
   position: absolute;
   left: 79rem;
-  top: 210rem;
+  top: 206rem;
   min-width: 4rem;
   min-height: 4rem;
   background-color: #fafafa;
@@ -116,7 +119,7 @@
   z-index: 1;
   position: absolute;
   left: 84rem;
-  top: 210rem;
+  top: 206rem;
   min-width: 4rem;
   min-height: 4rem;
   background-color: #fafafa;
