--- a/src/components/store/Store.css
+++ b/src/components/store/Store.css
@@ -12,7 +12,7 @@
   text-align: center;
 
   position: absolute;
-  top: 450rem;
+  top: 431rem;
 }
 
 .title5 h2 {
@@ -49,29 +49,31 @@
   left: 59rem;
   font-size: 110%;
 }
-
+.second-pard{
+  width:90%
+}
 .second-pard img {
   width: 60%;
   background-position: fill;
   margin-top: -5%;
-  margin-left: 21%;
+  margin-left: 25%;
 }
 .second-pard h1 {
   position: absolute;
   left: 54rem;
-  top: 502rem;
+  top: 480rem;
   font-size: xx-large;
 }
 .second-pard p {
   position: absolute;
-  left: 52.5rem;
-  top: 508rem;
+  left: 53rem;
+  top: 484.5rem;
   width: 30%;
 }
 .input-sub input {
   position: absolute;
-  left: 51rem;
-  top: 513rem;
+  left: 52rem;
+  top: 489rem;
   width: 31.5%;
   height: 5%;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
@@ -93,8 +95,8 @@
   font-size: 13px;
   height: 40px;
   padding: 0 25px;
-  left: 51rem;
-  top: 518rem;
+  left: 52rem;
+  top: 494.5rem;
   width: 31.5%;
 }
 
